--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
 
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     def room_version = "2.5.0"
     def lifecycle_version = "2.5.1"
 
