--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     def room_version = "2.5.0"
     def lifecycle_version = "2.6.0"
 
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
